--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
 <html>
-  
-  <embed src="adguard.txt">
-</html>
+  <body>
+    <h1>Scammers deomain block list for AdGuard</h1>
+    <embed src="adguard.txt"/>
+  </body>
+</html> 
