--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Scammers deomain block list for AdGuard</h1>
-    <embed src="adguard.txt"/>
+    <h1>Scammers domain block list for AdGuard</h1>
+    <embed src="adguard.txt" style="width: 100%; height: 100%;"/>
   </body>
 </html> 
