--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Scam block list for AdGuard and other blocker">
+    <meta name="keywords" content="scam, scammers, adguard, blocklist, blacklist">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scammers domain block list for AdGuard</title>
+  </head> 
   <body>
-    <h1>Scammers domain block list for AdGuard</h1>
     <embed src="adguard.txt" style="width: 100%; height: 100%;"/>
   </body>
 </html> 
