--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Scam block list for AdGuard and other blocker">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scammers domain block list for AdGuard</title>
   </head> 
-  <body>
+  <body style="height: 100%;">
     <embed src="adguard.txt" style="width: 100%; height: 100%;"/>
   </body>
 </html> 
