--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   </head> 
   <body style="height: 100%;">
     <embed src="adguard.txt" style="width: 100%; height: 100%;"/>
+    <object type="text/plain" style="width: 100%; height: 100%;" data="file.txt"></object>
   </body>
 </html> 
