--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Scammers domain block list for AdGuard</title>
   </head> 
   <body style="height: 100%;">
-    <embed src="adguard.txt" style="width: 100%; height: 100%;"/>
-    <object type="text/plain" style="width: 100%; height: 100%;" data="file.txt"></object>
+    <object type="text/plain" style="width: 100%; height: 100%;" data="adguard.txt">
+        <a href="adguard.txt">No Support?</a>
+    </object>
   </body>
 </html> 
